--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://Justin200207.github.io/justin200207",
+  "homepage": "https://justin200207.github.io/",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
